Updated Main.java file for Project

--- a/Problems/Account Service/task-info.yaml
+++ b/Problems/Account Service/task-info.yaml
@@ -1,8 +1,8 @@
 type: code
 files:
-- name: src/Main.java
-  visible: true
-  text: "interface AccountService {\n    /**\n     * It finds an account by owner\
+  - name: src/Main.java
+    visible: true
+    text: "interface AccountService {\n    /**\n     * It finds an account by owner\
     \ id\n     * @param id owner unique identifier\n     * @return account or null\n\
     \     */\n    Account findAccountByOwnerId(long id);\n    /**\n     * It count\
     \ the number of account with balance > the given value\n     * @param value\n\
@@ -20,11 +20,11 @@ files:
     \ { \n        return id; \n    }\n\n    public String getFirstName() { \n    \
     \    return firstName; \n    }\n\n    public String getLastName() { \n       \
     \ return lastName; \n    }\n}"
-  learner_created: false
-feedback_link: https://hyperskill.org/learn/step/2121
+    learner_created: false
+feedback_link: https://hyperskill.org/learn/step/2121#comment
 status: Solved
 feedback:
   message: <html>Correct solution<br/><br/>Continue on <a href="https://hyperskill.org/learn/step/2121">JetBrains
     Academy</a></html>
-  time: Wed, 22 Jul 2020 17:51:19 UTC
+  time: "Wed, 22 Jul 2020 17:51:19 UTC"
 record: -1
