--- a/Problems/Shape hierarchy/task-info.yaml
+++ b/Problems/Shape hierarchy/task-info.yaml
@@ -1,19 +1,19 @@
 type: code
 files:
-- name: src/Main.java
-  visible: true
-  text: |-
-    abstract class Shape {
-
-        abstract double getPerimeter();
-
-        abstract double getArea();
-    }
-  learner_created: false
-feedback_link: https://hyperskill.org/learn/step/2120
+  - name: src/Main.java
+    visible: true
+    text: |-
+      abstract class Shape {
+      
+          abstract double getPerimeter();
+      
+          abstract double getArea();
+      }
+    learner_created: false
+feedback_link: https://hyperskill.org/learn/step/2120#comment
 status: Solved
 feedback:
   message: <html>Correct solution<br/><br/>Continue on <a href="https://hyperskill.org/learn/step/2120">JetBrains
     Academy</a></html>
-  time: Wed, 22 Jul 2020 16:12:43 UTC
+  time: "Wed, 22 Jul 2020 16:12:43 UTC"
 record: -1
