--- a/Problems/Motors/task-info.yaml
+++ b/Problems/Motors/task-info.yaml
@@ -1,8 +1,8 @@
 type: code
 files:
-- name: src/Main.java
-  visible: true
-  text: "import java.util.Scanner;\n\n/* Product - Motor */\nabstract class Motor\
+  - name: src/Main.java
+    visible: true
+    text: "import java.util.Scanner;\n\n/* Product - Motor */\nabstract class Motor\
     \ {\n\n    String model;\n    long power;\n\n    public Motor(String model, long\
     \ power) {\n        this.model = model;\n        this.power = power;\n    }\n\n\
     \    @Override\n    public String toString() {\n        return \"motor={model:\"\
@@ -20,11 +20,7 @@ files:
     \     \n        final String model = scanner.next();\n        final long power\
     \ = scanner.nextLong();\n        // write your code here ...\n        scanner.close();\n\
     \       System.out.println(motor);\n    }\n}"
-  learner_created: false
-feedback_link: https://hyperskill.org/learn/step/5768
-status: Solved
-feedback:
-  message: <html>Correct solution<br/><br/>Continue on <a href="https://hyperskill.org/learn/step/5768">JetBrains
-    Academy</a></html>
-  time: Tue, 04 Aug 2020 11:23:41 UTC
+    learner_created: false
+feedback_link: https://hyperskill.org/learn/step/5768#comment
+status: Failed
 record: -1
